Add saving to user defaults for home screen logo

--- a/Golf1/Info.plist
+++ b/Golf1/Info.plist
@@ -43,5 +43,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allows you to add your own logo.</string>
+	<key>Logo Image</key>
+	<data></data>
 </dict>
 </plist>
